[gd_scene load_steps=3 format=3 uid="uid://c0fr6ukyj835o"]

[ext_resource type="Texture2D" uid="uid://7icqglxkk1u1" path="res://assets/block_red.png" id="1"]
[ext_resource type="Script" uid="uid://dpdh7rxmbo11k" path="res://scenes/Buttons/RedGenerator/red_generator.gd" id="2_hqept"]

[node name="RedGenerator" type="TextureButton" groups=["blocks"]]
texture_normal = ExtResource("1")
script = ExtResource("2_hqept")

[connection signal="button_down" from="." to="." method="_on_button_down"]
